# osp-triviality

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.binder/: requirements.txt
.github/workflows/: test.yml
data/algebra_structures/: B_0_1_structure.json  B_0_2_structure.json  B_0_3_structure.json  B_0_4_structure.json  B_0_5_structure.json  B_1_0_structure.json  B_1_1_structure.json  B_1_2_structure.json  B_2_0_structure.json  B_2_1_structure.json  B_2_2_structure.json  B_3_0_structure.json  B_3_1_structure.json  B_3_2_structure.json  B_3_3_structure.json  osp_1_2_structure.json  osp_1_4_structure.json  osp_1_6_structure.json
data/gamma_structures/: B_0_1_gamma.json  B_0_2_gamma.json  B_0_3_gamma.json  B_0_4_gamma.json  B_0_5_gamma.json  B_1_0_gamma.json  B_1_1_gamma.json  B_1_2_gamma.json  B_2_1_gamma.json  B_2_2_gamma.json  osp_1_2_gamma.json  osp_1_4_gamma.json  osp_1_6_gamma.json
docs/: schemas.md  theory.md
notebooks/: demo_certificate_verification.ipynb
scripts/: check_triviality.py  construct_f_B01.py  generate_gamma.py  generate_structure.py  verify_Bmn_rank.py  verify_all.sh  verify_certificates.py  verify_certificates_algebraic.py  verify_dim_formula.py  verify_n_invariance.py  verify_trivial_algebraic.py
src/oscillator_lie_superalgebras/: B_generators.py  B_structure_builder.py  __init__.py  adjoint_from_json.py  algebra_parser.py  cohomology_solver.py  evaluated_structure_builder.py  evaluated_structure_parser.py  (+10 more)
tests/: conftest.py  test_certificates.py  test_core_modules.py  test_json_loading.py  test_triviality.py
