[project]
name = "osp-triviality"
version = "0.1.0"
description = "Triviality verification for osp(1|2n) deformations"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "sympy>=1.12",
]

[project.optional-dependencies]
test = ["pytest>=7.0.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
